src/snapshots/ck__ui_tests__conversation.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread  ›  Conversation of No.1001                3 posts  ·  2 new


    Anonymous   OP  2026-09-21 09:13 · 5h ago  No.1000
    Snapshot thread
    op.png  800x600 · 121 KB

    A thread for snapshot tests.
    It has a few replies.

    Replies  >>1001


  ▌
  ▌ Anonymous   conversation  2026-09-21 10:13 · 4h ago  No.1001
  ▌
  ▌ >>1000 (OP)
  ▌ >implying
  ▌
  ▌ Replies  >>1003
  ▌
     new posts

        Anonymous   new  2026-09-21 12:13 · 2h ago  No.1003

        ░░░░░░ and >>1001



  ✓  3 posts; esc or c shows the whole thread                                             2/3  66%
