src/snapshots/ck__ui_tests__filter_editor.snap
---
source: src/ui_tests.rs
assertion_line: 340
expression: snapshot(&mut a)
---
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the current theme
    Color depth       auto (24-bit)                     24-bit color, or the nearest of 256
    Read  Filter: Named !Trip                                      enter keep · esc cancel  post…

  Catalo  Pattern     ^Named (!Trip▏
    Defa  Label       Named !Trip
    Imag  Action      highlight                                                             er a…
    Filt    subject   ·                                                                      one…
            comment   ·
  Backgr    name      ✓ looked at
    Open    filename  ·
    Watc    md5       ·                                                                     s
    Noti  Sites       4chan                                                                 s to…
          Boards      g
  Sites   On          yes
    Add                                                                                     inds…
    Your                                                                                     you…
          Not a valid pattern: unclosed group
  Downlo
    Folder            ~/Downloads/ck/{site}/{board}/{…  Where saved files and pages go

  Startup
    Last place        restored                          Start where you left off (ck URL starts …

  Keys
 enter change   esc back   , settings   ? help
