src/snapshots/ck__ui_tests__filter_list.snap
---
source: src/ui_tests.rs
assertion_line: 330
expression: snapshot(&mut a)
---
 ck  Settings

  Appearance
    Theme             material                          Live preview while choosing
    Colors            as the theme has them             Change any color of the current theme
    Color depth       auto (24-bit)                     24-bit color, or the nearest of 256
    Reading position  30% from the edges                How far from the edges the selected post…

  Catalog
    Default layout    cards                             c in a catalog sets a board's own
    Filters                             enter edit · space on/off · a add · x remove · esc close

     hide        crypto                subject+comment   everywhere          (?i)…  nothing here
     highlight   Named !Trip           name              /g/ on 4chan        ^Named !Tr…  1 post
     off         implying              comment           everywhere          implying     1 post


    Counts are for the open catalog and thread. Kept in the config as [[filter]] tables.

  Sites
    Add a site        23 sites so far                   Paste a link to any page of it; ck finds…
    Your sites        only the built-in ones            The ones you added, or built-in ones you…

  Downloads
    Folder            ~/Downloads/ck/{site}/{board}/{…  Where saved files and pages go

  Startup
    Last place        restored                          Start where you left off (ck URL starts …

 enter change   esc back   , settings   ? help
