src/snapshots/ck__ui_tests__filtered_catalog_and_thread.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  Technology                                               4 threads  ·  1 hidden

  ▌             pinned   locked  Welcome to /g/                   3 replies · 0 images · 1y ago
               Read the rules before posting.
        …


               /lmg/ - Local Models General                    312 replies · 58 images · 5h ago
               Previous threads: >>900 & >>800
        …


  ▏             rust  Rust or C++?                               45 replies · 3 images · 2d ago
               Which one and why? [spoiler]
        …














 enter open   v view image   w watch   / filter   . more   f hints   s sort   c layout   ? help
