src/snapshots/ck__ui_tests__filtered_thread.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread                                            5 posts  ·  2 new


                      Anonymous   OP  2026-09-21 09:13 · 5h ago  No.1000
                      Snapshot thread
                      op.png  800x600 · 121 KB

           …          A thread for snapshot tests.
                      It has a few replies.

                      Replies  >>1001


    No.1001  hidden by the filter "no implying"


    Anonymous  2026-09-21 11:13 · 3h ago  No.1002

    Code:
    fn main() {
        println!("snapshot");
    }



    Anonymous   new  2026-09-21 12:13 · 2h ago  No.1003

    secret and >>1001

 j/k post   tab images & links   f hints   . more   enter quote   c conversation   ? help
