src/snapshots/ck__ui_tests__gallery.snap
---
source: src/ui_tests.rs
expression: snapshot(&mut a)
---
 ck  4chan  ›  /g/  ›  Snapshot thread  ›  Files                      3 files  ·  5 posts  ·  2 new

                        ▌



           …                     …                     …



    No.1000  PNG          No.1002  PNG          No.1002  WEBM


















 h/j/k/l move   enter view   d save   y copy URL   esc back to the post   , settings   ? help
